# PiReaderOS

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.toml  requirements.txt
.github/workflows/: test.yaml
config/: logging.yaml
src/pireaderos/: main.py
src/pireaderos/apps/: base.py  home.py  registry.py  settings.py
src/pireaderos/common/: constants.py  enums.py  models.py
src/pireaderos/core/: current.py  event.py  logging.py  manager.py
src/pireaderos/hal/: manager.py
src/pireaderos/hardware/: epaper.py  models.py  touch.py
src/pireaderos/input/: constants.py  engine.py  enums.py  geometry.py  handler.py  models.py  processor.py  resolver.py
src/pireaderos/input/state_machine/: multi_touch.py  single_touch.py
src/pireaderos/render/: pillow.py  step.py  strategy.py
src/pireaderos/ui/: component.py  matrix.py
src/pireaderos/ui/behavior/: base.py  delayed_tap.py  drag.py  hold.py  multi_touch_hold.py  swipe.py  tap.py  touch_down.py  zoom_and_rotate.py
tests/: conftest.py
tests/apps/: test_registry.py
tests/core/: test_current.py  test_event.py  test_manager.py
tests/hal/: test_hw_manager.py
tests/hardware/: test_epaper.py  test_touch.py
tests/input/: test_engine.py  test_handler.py  test_processor.py  test_resolver.py
tests/input/state_machine/: test_multi_touch.py  test_single_touch.py
tests/render/: test_step.py  test_strategy.py
tests/ui/: test_component.py
tests/ui/behavior/: test_delayed_tap.py  test_drag.py  test_hold.py  test_multi_touch_hold.py  test_swipe.py  test_tap.py  test_touch_down.py  test_zoom_and_rotate.py
