[project]
name = "pireaderos"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0.3",
]

[project.scripts]
pireaderos = "pireaderos.main:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unittest: isolated logic tests",
    "integration: runtime tests"
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]
branch = true

[tool.coverage.report]
exclude_also = [
    'if __name__ == .__main__.:',
    '\A(?s:.*# pragma: exclude file.*)\Z',
]
skip_covered = true
skip_empty = true
show_missing = true
fail_under = 80